# AlgerClipboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/hooks/: auto-approve-safe.cjs  validate-command.cjs
.github/workflows/: build.yml  ci.yml  rapidocr-manual.yml
docs/: cloud-sync-guide.md  requirements.md  technical-design.md
docs/en/: cloud-sync-guide.md  ocr-guide.md  rapidocr-development.md  search-guide.md
docs/plans/: 2026-03-04-m1-features-tasks.md  2026-03-04-m1-mvp-implementation.md
docs/plugin-example/hello-world/: manifest.json
docs/zh-CN/: cloud-sync-guide.md  ocr-guide.md  rapidocr-development.md  search-guide.md
scripts/rapidocr/: README.md  build-mock-runtime.mjs  build-real-runtime.ps1  build-real-runtime.sh  descriptor.example.json  generate-manifest.mjs  generate-release-descriptor.mjs
scripts/rapidocr/real-runtime/: alger_rapidocr.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/ai/: classifier.rs  engine.rs  language.rs  mod.rs  providers.rs
src-tauri/src/ai/adapters/: anthropic.rs  gemini.rs  mod.rs  openai_compatible.rs
src-tauri/src/app_launcher/: icon.rs  launcher.rs  mod.rs  scanner.rs
src-tauri/src/clipboard/: entry.rs  file_meta.rs  mod.rs  monitor.rs  sensitive.rs
src-tauri/src/commands/: ai_cmd.rs  app_launcher_cmd.rs  clipboard_cmd.rs  favicon_cmd.rs  file_cmd.rs  mod.rs  notification_cmd.rs  ocr_cmd.rs  paste_cmd.rs  plugin_cmd.rs  search_cmd.rs  settings_cmd.rs  spotlight_cmd.rs  sync_cmd.rs  template_cmd.rs  translate_cmd.rs  webview_cmd.rs
src-tauri/src/ocr/: ai_vision.rs  baidu.rs  engine.rs  google.rs  linux_ocr.rs  local_model.rs  macos_ocr.rs  mod.rs  native.rs  online_model.rs  rapidocr.rs  runtime.rs  tencent.rs  windows_ocr.rs
src-tauri/src/paste/: linux.rs  macos.rs  mod.rs  simulator.rs  windows.rs
src-tauri/src/plugin_system/: ffi.rs  host.rs  manager.rs  manifest.rs  mod.rs  permissions.rs
src-tauri/src/search/: fts.rs  mod.rs  pinyin_utils.rs  query_parser.rs
src-tauri/src/storage/: blob.rs  database.rs  mod.rs
src-tauri/src/sync/: encryption.rs  engine.rs  manifest.rs  mod.rs  scheduler.rs
src-tauri/src/sync/adapters/: google_drive.rs  mod.rs  oauth.rs  onedrive.rs  webdav.rs
src-tauri/src/translate/: baidu.rs  engine.rs  google.rs  mod.rs  youdao.rs
src/components/: CloseConfirmDialog.tsx  ContextMenu.tsx  EntryCard.tsx  GlassSurface.tsx  Icon.tsx  ImageViewer.tsx  MergeDialog.tsx  PresetSelector.tsx  SearchBar.tsx  SourceBadge.tsx  TemplateQuickPicker.tsx  TextViewer.tsx  TitleBar.tsx  TranslateDialog.tsx  TypeFilter.tsx
src/components/editor/: CodeEditor.tsx  MarkdownPreview.tsx  RichEditor.tsx  SplitView.tsx
src/components/file-preview/: ArchivePreview.tsx  AudioPreview.tsx  DeletedFileView.tsx  DirectoryPreview.tsx  FileList.tsx  utils.ts  (+6 more)
src/constants/: aiServices.ts  askAiPresets.ts
src/contexts/: PlatformContext.tsx
src/hooks/: usePreviewCloseShortcut.ts
src/i18n/: index.ts
src/lib/: contentDetect.ts  highlightText.tsx  richText.ts  toast.tsx  windowSize.ts
src/pages/: AskAiPanel.tsx  ClipboardPanel.tsx  DetailPage.tsx  FileViewerPage.tsx  Settings.tsx  SpotlightPanel.tsx  TagManager.tsx  TemplateManager.tsx
src/plugin_system/: api.ts  loader.ts  registry.ts  types.ts
src/services/: aiService.ts  appLauncherService.ts  askAiService.ts  clipboardService.ts  detailWindowService.ts  exportService.ts  featureService.ts  fileViewerService.ts  imageViewerService.ts  injectionScripts.ts  notificationService.ts  ocrService.ts  pluginService.ts  settingsService.ts  settingsWindowService.ts  spotlightWindowService.ts  syncService.ts  tagManagerWindowService.ts  templateService.ts  templateWindowService.ts  textTransformService.ts  translateService.ts  updateService.ts  windowOptions.ts
src/spotlight/: appMode.ts  clipboardMode.ts  translateMode.ts  types.ts
src/stores/: aiStore.ts  askAiStore.ts  capabilityStore.ts  clipboardStore.ts  settingsStore.ts  spotlightStore.ts  syncStore.ts  templateStore.ts  translateStore.ts
src/types/: index.ts
website/: CHANGELOG.md  changelog.html  index.html  robots.txt  sitemap.xml
website/css/: style.css
website/js/: i18n.js  main.js
(+39 files in other folders)
