[package]
name = "alger-clipboard"
version = "1.5.1"
description = "AlgerClipboard - A smart clipboard manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.3.3"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
arboard = { version = "3", features = ["image-data"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
hex = "0.4"
directories = "5"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
md-5 = "0.10"
hmac = "0.12"
urlencoding = "2"
async-trait = "0.1"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
] }
